Alpha 0.1.8.44
- Add support for PlotSquared 7. Thanks, Bloody_Mind, for the suggestion!
- Added the "/BigDoors PrepareDatabaseForV2" command. This will export your database to the format used by v2. Note that both the export and v2 are still experimental!

Alpha 0.1.8.43
- Fix startup issue on older versions of MC. Thanks, Trombettino, for the report!
- Add config option to change how to count the number of doors a player owns (defaults to only include doors created by the player). Thanks, Chris6ix, for the suggestion!

Alpha 0.1.8.42
- Write changelog to console when update is available.
- Add some functionality to aid the exciting new physics addon: https://github.com/bonn2/BigDoorsPhysics
- Add 1.19 resource packs.

Alpha 0.1.8.41
- Add support for MC 1.19.3.
- Add support for GriefDefender v2. Thanks, haroldrc, for the heads-up!
- Add support for Medieval Factions 5. Thanks, OGVampire, for the suggestion!
- Add config option to refund doors on delete. Thanks, LoneTiger, for the suggestion!
- Add new event: DoorDeleteEvent. This is called after a door is deleted.
- Blacklist ores by default when mcMMO is installed.

Alpha 0.1.8.40
- Add support for 1.19.1.
- Force legacy materials stuff to run on init to avoid slowdowns later on. Thanks, YoshiiKun_, for the report!

Alpha 0.1.8.39
- Fix issue with protection hooks for offline players on MC 1.17.x and 1.18.x caused by a failure to correctly count to 3.

Alpha 0.1.8.38
- Add support for Minecraft 1.19.
- Fixed bottom row of blocks sometimes lagging behind the rest of the door when dragging over other blocks (BigDoor, SlidingDoor).
- Allow certain types of attached blocks (e.g. torches, rails, plants, redstone, etc) to be part of doors on 1.18+.
- Add support for Java 19.
- Added hook for Konquest. Thanks, Sy, for the suggestion!
- Added DoorEventAutoToggle to allow other plugins (BDO) to cancel the autoCloseTimer.

Alpha 0.1.8.37