@@ -4,22 +4,24 @@ import nl.pim16aap2.bigDoors.BigDoors;
 import nl.pim16aap2.bigDoors.util.Util;
 import org.bukkit.Bukkit;
 import org.bukkit.Location;
-import org.bukkit.OfflinePlayer;
 import org.bukkit.World;
 import org.bukkit.entity.Player;
 import org.bukkit.event.EventHandler;
 import org.bukkit.event.Listener;
 import org.bukkit.event.server.PluginEnableEvent;
 import org.bukkit.plugin.Plugin;
+import org.jetbrains.annotations.Nullable;
 
-import javax.annotation.Nullable;
 import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.Map;
 import java.util.Objects;
 import java.util.UUID;
+import java.util.concurrent.Callable;
 import java.util.concurrent.CompletableFuture;
-import java.util.concurrent.ExecutionException;
+import java.util.concurrent.TimeUnit;
+import java.util.concurrent.TimeoutException;
+import java.util.function.Function;
 import java.util.logging.Level;
 
 /**
@@ -39,7 +41,8 @@ public class ProtectionCompatManager implements Listener
     /**
      * Constructor of {@link ProtectionCompatManager}.
      *
-     * @param plugin The instance of {@link BigDoors}.
+     * @param plugin
+     *     The instance of {@link BigDoors}.
      */
     public ProtectionCompatManager(final BigDoors plugin)
     {
@@ -63,89 +66,52 @@ public class ProtectionCompatManager implements Listener
     }
 
     /**
-     * Check if a player is allowed to bypass the compatibility checks. Players can
-     * bypass the check if they are OP or if they have the
-     * {@link ProtectionCompatManager#BYPASS_PERMISSION} permission node.
+     * Check if a player is allowed to bypass the compatibility checks. Players can bypass the check if they are OP or
+     * if they have the {@link ProtectionCompatManager#BYPASS_PERMISSION} permission node.
      *
-     * @param player The {@link Player} to check the permissions for.
+     * @param player
+     *     The {@link Player} to check the permissions for.
      * @return True if the player can bypass the checks.
      */
-    private boolean canByPass(Player player)
+    private CompletableFuture<Boolean> canBypass(Player player)
     {
         if (player.isOp())
-            return true;
+            return CompletableFuture.completedFuture(true);
 
-        // offline players don't have permissions, so use Vault if that's the case.
+        // Real players do not have the FAKE_PLAYER tag, so we can use the real permissions check for them.
         if (!player.hasMetadata(FakePlayerCreator.FAKE_PLAYER_METADATA))
-            return player.hasPermission(BYPASS_PERMISSION);
-        return offlinePlayerHasPermission(player, player.getWorld().getName());
+            return CompletableFuture.completedFuture(player.hasPermission(BYPASS_PERMISSION));
+
+        // offline players don't have permissions, so use Vault to read those.
+        return plugin.getVaultManager().hasPermission(player, BYPASS_PERMISSION, player.getWorld().getName());
     }
 
     /**
-     * Circuitous way of checking if an offline player has a given permission in a
-     * given world or not.
+     * Get an online player from a player {@link UUID} in a given world. If the player with the given UUID is not
+     * online, a fake-online player is created.
      *
-     * @param oPlayer The offline player to check.
-     * @param world   The world to check the permission in.
-     * @return The if the player has the bypass permission node in this world.
-     */
-    private boolean offlinePlayerHasPermission(OfflinePlayer oPlayer, String world)
-    {
-        try
-        {
-            CompletableFuture<Boolean> future = CompletableFuture
-                .supplyAsync(() -> plugin.getVaultManager().hasPermission(oPlayer, BYPASS_PERMISSION, world));
-
-            return future.get();
-        }
-        catch (InterruptedException | ExecutionException e)
-        {
-            e.printStackTrace();
-        }
-        return false;
-    }
-
-    /**
-     * Get an online player from a player {@link UUID} in a given world. If the
-     * player with the given UUID is not online, a fake-online player is created.
-     *
-     * @param playerUUID The {@link UUID} of the player to get.
-     * @param playerName The name of the player. Used in case the player isn't
-     *                   online.
-     * @param world      The {@link World} the player is in.
+     * @param playerUUID
+     *     The {@link UUID} of the player to get.
+     * @param playerName
+     *     The name of the player. Used in case the player isn't online.
+     * @param world
+     *     The {@link World} the player is in.
      * @return An online {@link Player}. Either fake or real.
+     *
      * @see FakePlayerCreator
      */
     private @Nullable Player getPlayer(UUID playerUUID, String playerName, World world)
     {
-        Player player = Bukkit.getPlayer(playerUUID);
-        if (player == null)
-            player = fakePlayerCreator.getFakePlayer(Bukkit.getOfflinePlayer(playerUUID), playerName, world);
-        return player;
+        final Player player = Bukkit.getPlayer(playerUUID);
+        if (player != null)
+            return player;
+
+        return fakePlayerCreator.getFakePlayer(Bukkit.getOfflinePlayer(playerUUID), playerName, world);
     }
 
-    /**
-     * Check if a player can break a block at a given location.
-     *
-     * @param playerUUID The {@link UUID} of the player to check for.
-     * @param playerName The name of the player. Used in case the player isn't
-     *                   online.
-     * @param loc        The {@link Location} to check.
-     * @return The name of the {@link IProtectionCompat} that objects, if any, or
-     *         null if allowed by all compats.
-     */
-    public String canBreakBlock(UUID playerUUID, String playerName, Location loc)
+    // Needs to be called from the main thread!
+    private @Nullable String canBreakBlockSync(Player fakePlayer, Location loc)
     {
-        if (protectionCompats.isEmpty())
-            return null;
-
-        final @Nullable Player fakePlayer = getPlayer(playerUUID, playerName, loc.getWorld());
-        if (fakePlayer == null)
-            return "InvalidFakePlayer";
-
-        if (canByPass(fakePlayer))
-            return null;
-
         for (IProtectionCompat compat : protectionCompats)
             try
             {
@@ -155,38 +121,16 @@ public class ProtectionCompatManager implements Listener
             catch (Exception e)
             {
                 plugin.getMyLogger()
-                    .warn("Failed to use \"" + compat.getName() + "\"! Please send this error to pim16aap2:");
+                      .warn("Failed to use \"" + compat.getName() + "\"! Please send this error to pim16aap2:");
                 e.printStackTrace();
                 plugin.getMyLogger().logMessageToLogFile(compat.getName() + "\n" + Util.throwableToString(e));
             }
         return null;
     }
 
-    /**
-     * Check if a player can break all blocks between two locations.
-     *
-     * @param playerUUID The {@link UUID} of the player to check for.
-     * @param playerName The name of the player. Used in case the player isn't
-     *                   online.
-     * @param loc1       The start {@link Location} to check.
-     * @param loc2       The end {@link Location} to check.
-     * @return The name of the {@link IProtectionCompat} that objects, if any, or null if allowed by all compats.
-     */
-    public String canBreakBlocksBetweenLocs(UUID playerUUID, String playerName, World world, Location loc1,
-                                            Location loc2)
+    // Needs to be called from the main thread!
+    private @Nullable String canBreakBlocksBetweenLocsSync(Player fakePlayer, World world, Location loc1, Location loc2)
     {
-        if (protectionCompats.isEmpty())
-            return null;
-
-        final @Nullable Player fakePlayer = getPlayer(playerUUID, playerName, world);
-        if (fakePlayer == null)
-            return "InvalidFakePlayer";
-
-        if (canByPass(fakePlayer))
-            return null;
-        if (protectionCompats.isEmpty())
-            return null;
-
         loc1 = loc1.clone();
         loc2 = loc2.clone();
 
@@ -211,10 +155,112 @@ public class ProtectionCompatManager implements Listener
         return null;
     }
 
+    private CompletableFuture<@Nullable String> checkForPlayer(Player fakePlayer, Callable<@Nullable String> callable)
+    {
+        return canBypass(fakePlayer).thenApplyAsync(
+            canBypass ->
+            {
+                if (canBypass)
+                    return null;
+
+                try
+                {
+                    return Bukkit
+                        .getScheduler()
+                        .callSyncMethod(plugin, callable)
+                        .get(1, TimeUnit.SECONDS);
+                }
+                catch (InterruptedException e)
+                {
+                    e.printStackTrace();
+                    Thread.currentThread().interrupt();
+                    return "ERROR";
+                }
+                catch (TimeoutException e)
+                {
+                    plugin.getMyLogger().severe("Timed out checking permissions for offline player: " + fakePlayer);
+                    throw new RuntimeException(e);
+                }
+                catch (Exception e)
+                {
+                    plugin.getMyLogger().severe("Failed to check permissions for offline player: " + fakePlayer);
+                    throw new RuntimeException(e);
+                }
+            });
+    }
+
+    /**
+     * Checks something for a player. This can be used to, for example, check if a (fake) player has access to a
+     * location.
+     *
+     * @param playerUUID
+     *     The UUID of the player.
+     * @param playerName
+     *     The name of the player.
+     * @param world
+     *     The world in which to check the function.
+     * @param function
+     *     A function that accept a player and returns a String or null. The player argument may either be a real player
+     *     or a fake player created by {@link #fakePlayerCreator}.
+     * @return The future result of the function. If no hooks are registered with {@link #protectionCompats} the future
+     * will always contain 'null'. If at least one hook fails the test for the provided user, the name of that hook will
+     * be returned.
+     */
+    private CompletableFuture<@Nullable String> checkForPlayer(
+        UUID playerUUID, String playerName, World world, Function<Player, @Nullable String> function)
+    {
+        if (protectionCompats.isEmpty())
+            return CompletableFuture.completedFuture(null);
+
+        final @Nullable Player fakePlayer = getPlayer(playerUUID, playerName, world);
+        if (fakePlayer == null)
+            return CompletableFuture.completedFuture("InvalidFakePlayer");
+
+        return checkForPlayer(fakePlayer, () -> function.apply(fakePlayer));
+    }
+
+    /**
+     * Check if a player can break a block at a given location.
+     *
+     * @param playerUUID
+     *     The {@link UUID} of the player to check for.
+     * @param playerName
+     *     The name of the player. Used in case the player isn't online.
+     * @param loc
+     *     The {@link Location} to check.
+     * @return The name of the {@link IProtectionCompat} that objects, if any, or null if allowed by all compats.
+     */
+    public CompletableFuture<@Nullable String> canBreakBlock(UUID playerUUID, String playerName, Location loc)
+    {
+        return checkForPlayer(
+            playerUUID, playerName, loc.getWorld(), fakePlayer -> canBreakBlockSync(fakePlayer, loc));
+    }
+
+    /**
+     * Check if a player can break all blocks between two locations.
+     *
+     * @param playerUUID
+     *     The {@link UUID} of the player to check for.
+     * @param playerName
+     *     The name of the player. Used in case the player isn't online.
+     * @param loc1
+     *     The start {@link Location} to check.
+     * @param loc2
+     *     The end {@link Location} to check.
+     * @return The name of the {@link IProtectionCompat} that objects, if any, or null if allowed by all compats.
+     */
+    public CompletableFuture<@Nullable String> canBreakBlocksBetweenLocs(
+        UUID playerUUID, String playerName, World world, Location loc1, Location loc2)
+    {
+        return checkForPlayer(
+            playerUUID, playerName, world, fakePlayer -> canBreakBlocksBetweenLocsSync(fakePlayer, world, loc1, loc2));
+    }
+
     /**
      * Check if an {@link IProtectionCompat} is already loaded.
      *
-     * @param compatClass The class of the {@link IProtectionCompat} to check.
+     * @param compatClass
+     *     The class of the {@link IProtectionCompat} to check.
      * @return True if the compat has already been loaded.
      */
     private boolean protectionAlreadyLoaded(Class<? extends IProtectionCompat> compatClass)
@@ -226,10 +272,10 @@ public class ProtectionCompatManager implements Listener
     }
 
     /**
-     * Add a {@link IProtectionCompat} to the list of loaded compats if it loaded
-     * successfully.
+     * Add a {@link IProtectionCompat} to the list of loaded compats if it loaded successfully.
      *
-     * @param hook The compat to add.
+     * @param hook
+     *     The compat to add.
      */
     private void addProtectionCompat(IProtectionCompat hook)
     {
@@ -245,7 +291,8 @@ public class ProtectionCompatManager implements Listener
     /**
      * Load a compat for the plugin enabled in the event if needed.
      *
-     * @param event The event of the plugin that is loaded.
+     * @param event
+     *     The event of the plugin that is loaded.
      */
     @EventHandler
     protected void onPluginEnable(final PluginEnableEvent event)
@@ -256,7 +303,8 @@ public class ProtectionCompatManager implements Listener
     /**
      * Load a compat for a plugin with a given name if allowed and possible.
      *
-     * @param compatName The name of the plugin to load a compat for.
+     * @param compatName
+     *     The name of the plugin to load a compat for.
      */
     private void loadFromPluginName(final String compatName)
     {
